Update Icon and Carousel Color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -671,7 +671,7 @@ section {
   position: absolute;
   height: 40%;
   width: 100%;
-  background: #7d2ae8;
+  background:  #149ddd;
   border-radius: 20px 20px 0 0;
 }
 .card .card-content{
@@ -687,7 +687,7 @@ section .card .image{
   width: 140px;
   border-radius: 50%;
   padding: 3px;
-  background: #7d2ae8;
+  background:  #149ddd;
 }
 section .card .image img{
   height: 100%;
@@ -737,7 +737,7 @@ section .card .image img{
 .card .rating i{
   font-size: 18px;
   margin: 0 2px;
-  color: #7d2ae8;
+  color:  #149ddd;
 }
 .card .button{
   width: 100%;
@@ -746,7 +746,7 @@ section .card .image img{
   margin-top: 20px;
 }
 .card .button button{
-  background: #7d2ae8;
+  background:  #149ddd;
   outline: none;
   border: none;
   color: #fff;
@@ -757,7 +757,7 @@ section .card .image img{
   cursor: pointer;
 }
 .button button:hover{
-  background: #6616d0;
+  background: #2cb4f3;
 }
 .swiper-pagination{
   position: absolute;
@@ -766,16 +766,16 @@ section .card .image img{
   height: 7px;
   width: 26px;
   border-radius: 25px;
-  background: #7d2ae8;
+  background:  #149ddd;
 }
 .swiper-button-next, .swiper-button-prev{
   opacity: 0.7;
-  color: #7d2ae8;
+  color:  #149ddd;
   transition: all 0.3s ease;
 }
 .swiper-button-next:hover, .swiper-button-prev:hover{
   opacity: 1;
-  color: #7d2ae8;
+  color:  #149ddd;
 }
 /*--------------------------------------------------------------
 # Resume
